# valicode-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: test.yml
aov/: cli.py
examples/: github-actions.yml
