[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valicode"
version = "2.0.0"
description = "Valicode CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "toml>=0.10"
]
authors = [
  { name = "Valicode" }
]
license = "LicenseRef-Proprietary"
keywords = ["ai", "code-review", "security", "cli", "github"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://valicode.sbs"
Documentation = "https://valicode.sbs/docs"

[project.scripts]
aov = "aov.cli:cli"
valicode = "aov.cli:cli"
